--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
       <div class="header-text">
         <h1>SuperCare Services</h1>
-        <h4>Lorem ipsum, dolor sit amet consectetur adipisicing</h4>
+        <h4>Nannies Next Door</h4>
       </div>
       <nav>
         <ul class="nav-list">
@@ -36,43 +36,47 @@
     <main>
       <img src="img/main-photo.jpg" alt="nanny-pic" />
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, error
-        quas. Excepturi cupiditate exercitationem expedita, repudiandae quidem
-        alias velit enim inventore aspernatur maxime quas dignissimos molestiae
-        id rerum nesciunt cumque! Lorem, ipsum dolor sit amet consectetur
-        adipisicing elit. Minima soluta rem eligendi tenetur perspiciatis
-        repellendus nesciunt alias quos? Perferendis sapiente aspernatur,
-        aliquam cupiditate id itaque fuga placeat obcaecati delectus veritatis.
+        Find a Nanny<br>
+        Offering reliable nannies makes us fell living in a safer world.
+        A world in which babies spend their time in a safe enjoyable environment
+        and parents are calm that they can keep working in a relaxed mind state.
+        As London's number one nanny service, we pride ourselves on our deep understanding of integrating a nanny into your home.
+        Little Ones' experienced, bilingual consultants work hard to ensure that the best possible match between nanny and family is made.
+        By selecting only the best candidates, we provide only the best service for our clients.
       </p>
-      <img src="img/main2-photo.jpg"nanny-pic" />
+      <img src="img/main2-photo.jpg"nanny-pic />
       <div class="review">
         <p>
-          25.11.2022 The Nanny Circle has been absolutely fantastic,
-          streamlining and de-stressing a process which can be daunting.
-          Georgina shortlisted candidates, coordinated interviews and ensured
-          our exact childcare requirements. Every stage has been smooth and
-          stress free and I can't recommend them highly enough.
+          Find an After-School Nanny<br>
+          An after-school nanny can be beneficial for you and your children in numerous ways but finding the right candidate may be a bit of work. Many families are also searching for this type of childcare and it will be practical to start your quest with Little Ones UK today.
+          Our nannies hold the highest level of education, and have years of childcare experience. 
+          We have nannies that can take care of children of any age group, from young babies to children attending school. Our trustworthy and reliable after-school nannies make the perfect addition to any family who are looking for 24/7 help. 
+          An After-school nanny will become an integral part of your family and children’s lives, and Little Ones can help you find the perfect person to fulfil this role.
+         
         </p>
         <p>
-          25.11.2022 The Nanny Circle has been absolutely fantastic,
-          streamlining and de-stressing a process which can be daunting.
-          Georgina shortlisted candidates, coordinated interviews and ensured
-          our exact childcare requirements. Every stage has been smooth and
-          stress free and I can't recommend them highly enough.
+          Bilingual Nannies<br>
+          Little Ones has gained its reputation as an outstanding international nanny service due to our placement of experienced and educated bilingual nannies. Whether you need a nanny, nounou, ninera or kinderfrau, Little Ones London bilingual nanny service will provide you with the utmost in professional and personal service.
+          A second language is one of the greatest gifts that can be given to a child, as well as a proven advantage in school and life. With the care of a bilingual nanny, becoming fluent in a second language is not only possible, but simple and natural. A bilingual nanny can provide the care and attention expected of any nanny, but with the addition of enriching your child’s learning and view of the world.
+          Little Ones bilingual nanny consultants speak the languages we place. Our bilingual nanny consultants are trained professionals who are passionate about bilingual education for children. Our bilingual nanny consultants will do their best to match you with your perfect bilingual nanny.
+          Our nanny candidates speak French, Spanish, Italian, Russian, German, Dutch, Mandarin, Cantonese, Portuguese, Japanese, Arabic, Swedish, Finnish, Danish – and of course, English.
+          The safety and comfort of our clients and their families is our priority. Therefore, each placed candidate undergoes the following vetting procedures:
         </p>
         <p>
-          25.11.2022 The Nanny Circle has been absolutely fantastic,
-          streamlining and de-stressing a process which can be daunting.
-          Georgina shortlisted candidates, coordinated interviews and ensured
-          our exact childcare requirements. Every stage has been smooth and
-          stress free and I can't recommend them highly enough.
+          Nanny-Housekeepers<br>
+          With over 12 years experience placing nanny-housekeepers in London and UK homes, Little Ones are leaders in our field. Our nanny-housekeepers are flexible, committed, experienced.
+          Our nanny housekeeper candidates are flexible with live in, live out and part time options available. We are able to offer candidates who work from 20 hours per week to full time or even 24 hours 6 days per week.
+          Our nanny-housekeeper candidates come from across the globe including the UK, Philippines, Brazil, Portugal, South America, Spain, France, Malaysia, Australia, Germany and Japanese.
+          We have a wide range of the most professional, experienced and reliable nanny-housekeepers. All nanny-housekeeper candidates are carefully vetted to ensure the highest level of service to you and your family, creating a safe and kept home environment.
         </p>
         <p>
-          25.11.2022 The Nanny Circle has been absolutely fantastic,
-          streamlining and de-stressing a process which can be daunting.
-          Georgina shortlisted candidates, coordinated interviews and ensured
-          our exact childcare requirements. Every stage has been smooth and
-          stress free and I can't recommend them highly enough.
+          Part Time Nanny<br>
+          SuperCare Services in London specialise in Part-time nannies - both English speaking and Bilingual candidates
+          Part time nannies are a popular option for parents looking for flexibility, or a combination of nursery and in home childcare for their children. 
+          If you don’t require a nanny 24/7, but are in need of some extra help, a part time nanny could be perfect for you.
+          We are pleased to be able to offer part time nannies both on a permanent and temporary basis.
+          Our part time nannies offer years of experience – and are highly educated – in the care of children of all ages. 
+          We select only the most desirable candidates, with all applicants’ subject to strict vetting procedures.
         </p>
       </div>
     </main>
