--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a class="nav-links" href="#">Nanny Request</a>
           </li>
           <li class="nav-items"><a class="nav-links" href="#">Fees</a></li>
-          <li class="nav-items"><a class="nav-links" href="#">Contact uz</a></li>
+          <li class="nav-items"><a class="nav-links" href="#">Contact us</a></li>
         </ul>
       </nav>
     </header>
