--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <label for="contact">Phone No:</label>
         <input required class="radio" />
     
-        <label for="requirement">Address</label>
+        <label for="requirement">Address:</label>
         <input required class="radio" />        
     
         <label for="Home">PostCode:</label>
