--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
     <header>
       <div class="logo">
-        <img src="img/logo.png" alt="logo" />
+        <img src="img/logo3.jpg" alt="logo" width="200px" />
       </div>
       <div class="header-text">
         <h1>SuperCare Services</h1>
-        <h3>Nannies Next Door</h3>
+        <h3>Childcare you can trust</h3>
       </div>
       <nav>
         <ul class="nav-list">
@@ -24,7 +24,7 @@
           <li class="nav-items">
             <a class="nav-links" href="nanyRequest.html">Nanny Request</a>
           </li>
-          <li class="nav-items"><a class="nav-links" href="#">Fees</a></li>
+          <li class="nav-items"><a class="nav-links" href="#">Jobs</a></li>
           <li class="nav-items">
             <a class="nav-links" href="#contact">Contact</a>
           </li>
@@ -32,112 +32,78 @@
       </nav>
     </header>
     <main>
-      <img src="img/main-photo.jpg" alt="nanny-pic" />
-      <p>
-        Find a Nanny<br />
-        Offering reliable nannies makes us fell living in a safer world. A world
-        in which babies spend their time in a safe enjoyable environment and
-        parents are calm that they can keep working in a relaxed mind state. As
-        London's number one nanny service, we pride ourselves on our deep
-        understanding of integrating a nanny into your home. Little Ones'
-        experienced, bilingual consultants work hard to ensure that the best
-        possible match between nanny and family is made. By selecting only the
-        best candidates, we provide only the best service for our clients.
-      </p>
-      <img src="img/main2-photo.jpg" nanny-pic />
-      <div class="review">
-        <p>
-          Find an After-School Nanny<br />
-          An after-school nanny can be beneficial for you and your children in
-          numerous ways but finding the right candidate may be a bit of work.
-          Many families are also searching for this type of childcare and it
-          will be practical to start your quest with Little Ones UK today. Our
-          nannies hold the highest level of education, and have years of
-          childcare experience. We have nannies that can take care of children
-          of any age group, from young babies to children attending school. Our
-          trustworthy and reliable after-school nannies make the perfect
-          addition to any family who are looking for 24/7 help. An After-school
-          nanny will become an integral part of your family and children’s
-          lives, and Little Ones can help you find the perfect person to fulfil
-          this role.
-        </p>
-        <p>
-          Bilingual Nannies<br />
-          Little Ones has gained its reputation as an outstanding international
-          nanny service due to our placement of experienced and educated
-          bilingual nannies. Whether you need a nanny, nounou, ninera or
-          kinderfrau, Little Ones London bilingual nanny service will provide
-          you with the utmost in professional and personal service. A second
-          language is one of the greatest gifts that can be given to a child, as
-          well as a proven advantage in school and life. With the care of a
-          bilingual nanny, becoming fluent in a second language is not only
-          possible, but simple and natural. A bilingual nanny can provide the
-          care and attention expected of any nanny, but with the addition of
-          enriching your child’s learning and view of the world. Little Ones
-          bilingual nanny consultants speak the languages we place. Our
-          bilingual nanny consultants are trained professionals who are
-          passionate about bilingual education for children. Our bilingual nanny
-          consultants will do their best to match you with your perfect
-          bilingual nanny. Our nanny candidates speak French, Spanish, Italian,
-          Russian, German, Dutch, Mandarin, Cantonese, Portuguese, Japanese,
-          Arabic, Swedish, Finnish, Danish – and of course, English. The safety
-          and comfort of our clients and their families is our priority.
-          Therefore, each placed candidate undergoes the following vetting
-          procedures:
-        </p>
-        <p>
-          Nanny-Housekeepers<br />
-          With over 12 years experience placing nanny-housekeepers in London and
-          UK homes, Little Ones are leaders in our field. Our nanny-housekeepers
-          are flexible, committed, experienced. Our nanny housekeeper candidates
-          are flexible with live in, live out and part time options available.
-          We are able to offer candidates who work from 20 hours per week to
-          full time or even 24 hours 6 days per week. Our nanny-housekeeper
-          candidates come from across the globe including the UK, Philippines,
-          Brazil, Portugal, South America, Spain, France, Malaysia, Australia,
-          Germany and Japanese. We have a wide range of the most professional,
-          experienced and reliable nanny-housekeepers. All nanny-housekeeper
-          candidates are carefully vetted to ensure the highest level of service
-          to you and your family, creating a safe and kept home environment.
-        </p>
-        <p>
-          Part Time Nanny<br />
-          SuperCare Services in London specialise in Part-time nannies - both
-          English speaking and Bilingual candidates Part time nannies are a
-          popular option for parents looking for flexibility, or a combination
-          of nursery and in home childcare for their children. If you don’t
-          require a nanny 24/7, but are in need of some extra help, a part time
-          nanny could be perfect for you. We are pleased to be able to offer
-          part time nannies both on a permanent and temporary basis. Our part
-          time nannies offer years of experience – and are highly educated – in
-          the care of children of all ages. We select only the most desirable
-          candidates, with all applicants’ subject to strict vetting procedures.
-        </p>
+      <div class="aboutMe">
+        <img src="img/main.jpg" alt="nanny-pic" style="width: 100%" />
+        <div>
+          <br />
+          <h1>Bespoke Nanny Employment Agency</h1>
+          <br />
+          <p>
+            Established by early years educators, placing exceptional nannies,
+            who support your child at every milestone.<br />
+          </p>
+          <button><a href="nanyRequest.html">I'm a parent</a></button>
+          <button><a href="#">I'm a nanny</a></button>
+        </div>
+      </div>
+
+      <div class="nanny-cards">
+        <div class="card">
+          <img src="img/card1.jpeg" alt="nanny" style="width: 100%" />
+          <h2>Evening Sitters</h2>
+
+          <p>
+            Reliable, local childcare ready to help you reclaim your social
+            life.
+          </p>
+        </div>
+        <div class="card">
+          <img src="img/card2.jpg" alt="nanny" style="width: 100%" />
+          <h2>Daytime Help</h2>
+
+          <p>
+            Helping you manage your career, or just for an extra pair of hands.
+          </p>
+        </div>
+        <div class="card">
+          <img src="img/card3.jpg" alt="nanny" style="width: 100%" />
+          <h2>After-school</h2>
+          <p>
+            Fun, energetic and bubbly sitters to keep your kids entertained till
+            you get home.
+          </p>
+        </div>
+        <div class="card">
+          <img
+            src="img/card4.jpeg"
+            alt="nanny"
+            style="width: 100%"
+          />
+          <h2>Nanny-Housekeepers</h2>
+
+          <p>nanny housekeeper candidates are flexible with live in, live out and part time options available.</p>
+        </div>
       </div>
     </main>
     <footer>
       <div class="contact" id="contact">
-        <h3>Contact us:</h3>
-
+        <h1>Contact us:</h1>
         <p>Phon Number: +44 7809879865</p>
-
-        <a href="mailto:your@address.com"
-          >Email: SuperCare-services@gmail.com</a
+        <a href="mailto:your@address.com">
+          Email: SuperCare-services@gmail.com</a
         >
       </div>
       <div class="follow">
-        <h3>Follow us:</h3>
-
+        <h1>Follow us:</h1>
         <a href="https://www.instagram.com/" class="links-socialMedia"
           ><img
-            src="/img/Instagram.png"
+            src="/img/instagram3.png"
             class="images_socialMedia"
             alt="InstagramIcon"
         /></a>
-
         <a href="https://en-gb.facebook.com/" class="links-socialMedia"
           ><img
-            src="/img/Facebook.png"
+            src="/img/facebook3.png"
             class="images_socialMedia"
             alt="FacebookIcon"
         /></a>
