--- a/nanyRequest.html
+++ b/nanyRequest.html
@@ -10,11 +10,11 @@
   <body>
     <header>
       <div class="logo">
-        <img src="img/logo.png" alt="logo" />
+        <img src="img/logo3.jpg" alt="logo" width="200px" />
       </div>
       <div class="header-text">
         <h1>SuperCare Services</h1>
-        <h3>Nannies Next Door</h3>
+        <h3>Childcare you can trust</h3>
       </div>
       <nav>
         <ul class="nav-list">
@@ -24,7 +24,7 @@
           <li class="nav-items">
             <a class="nav-links" href="nanyRequest.html">Nanny Request</a>
           </li>
-          <li class="nav-items"><a class="nav-links" href="#">Fees</a></li>
+          <li class="nav-items"><a class="nav-links" href="#">Jobs</a></li>
           <li class="nav-items">
             <a class="nav-links" href="#contact">Contact</a>
           </li>
@@ -32,40 +32,19 @@
       </nav>
     </header>
     <main>
-      <div class="nany">
-        <img src="img/nanyRequest.jpg" alt="nany-pic" width="700px" />
+      <div class="image">
+        <img src="img/nanyRequest.jpg" alt="nany-pic"  />
+        
       </div>
-      <div class="form-text">
+      <div class="nany">
+        <div class="text">
         <h1>Register your interest below to start the process</h1>
 
-        <p>
+        <h3>
           The happiness and safety of your child is at the core of what we do.
-        </p>
-
-        <p>
-          The Nanny Circle provide clients a bespoke and personalised service.
-          We recruit high calibre nannies who are passionate about child
-          development and provide the very best pastoral and educational care.
-          We specialise in permanent and temporary placement nanny placement.
-        </p>
-
-        <p>
-          We personally interview every candidate so we can find the right nanny
-          for your family.
-        </p>
-
-        <p>
-          Our approach is based upon the educational principle that every child
-          is unique. We believe every family is too, there is no ‘one size fits
-          all’ and we work hard on your behalf to find a nanny to suit your
-          family dynamic and the needs of your children.
-        </p>
-
-        <p>
-          We are founded by early years educators who have hands on experience
-          in top early years settings and schools, so we understand quality
-          childcare.
-        </p>
+        </h3> 
+      </div>
+             
 
         <form>
           <fieldset class="name-container">
@@ -89,6 +68,26 @@
               required
             />
           </fieldset>
+          <fieldset class="phone-container">
+            <legend>Telephone*</legend>
+            <input
+              id="name"
+              type="text"
+              name="name"
+              placeholder="0789678589"
+              required
+            />
+          </fieldset>
+          <fieldset class="address-container">
+            <legend>Address*</legend>
+            <input
+              id="name"
+              type="text"
+              name="name"
+              placeholder="KT16 8AZ"
+              required
+            />
+          </fieldset>
 
           <fieldset class="contact-container">
             <legend>How would you like us to get in touch:*</legend>
@@ -101,60 +100,79 @@
             <label for="email">Email</label>
           </fieldset>
 
-          <fieldset class="size-container">
-            <legend>Please choose size*</legend>
-            <select id="size-tshirt" name="size-tshirt" required>
-              <option>XS</option>
-              <option>S</option>
-              <option>M</option>
-              <option>L</option>
-              <option>XL</option>
-              <option>XXL</option>
+          <fieldset class="nannyType-container">
+            <legend>What type of nanny are you looking for*</legend>
+            <select id="nanny" name="nanny" required>
+              <option>Choose one Please</option>
+              <option>Live In</option>
+              <option>After-school</option>
+              <option>Part Time</option>
+              <option>Maternity</option>
+              <option>Travel/Holiday</option>
+              <option>Other</option>
             </select>
           </fieldset>
-
-          <fieldset class="delivery-container">
-            <legend>Please choose delivery date*</legend>
-
+          <fieldset class="dateTime-container">
+            <legend>
+              What days and hours do you need your nanny to work?*
+            </legend>
             <input
-              type="date"
-              id="delivery-date"
-              name="delivery-date"
-              min="2022-11-07"
-              max="2022-12-04"
+              id="name"
+              type="text"
+              name="name"
+              placeholder="Sunday 9-12"
               required
             />
           </fieldset>
 
+          <fieldset class="startDate-container">
+            <legend>Please choose start date*</legend>
+
+            <input
+              type="date"
+              id="start-date"
+              name="start-datey-date"
+              min="2022-11-07"
+              required
+            />
+          </fieldset>
+          <fieldset class="request-container">
+            <legend>Any Request</legend>
+
+            <textarea
+              name="special-request"
+              id="request"
+              rows="6"
+              cols="50"
+            ></textarea
+            ><br />
+          </fieldset>
+
           <div class="submit-container">
-            <button type="submit">Place your order</button>
+            <button type="submit">Submit</button>
           </div>
         </form>
       </div>
     </main>
     <footer>
-      <div class="contact">
-        <h3>Contact us:</h3>
-
+      <div class="contact" id="contact">
+        <h1>Contact us:</h1>
         <p>Phon Number: +44 7809879865</p>
-
-        <a href="mailto:your@address.com"
-          >Email: SuperCare-services@gmail.com</a
+        <a href="mailto:your@address.com">
+          Email: SuperCare-services@gmail.com</a
         >
       </div>
       <div class="follow">
-        <h3>Follow us:</h3>
-
+        <h1>Follow us:</h1>
         <a href="https://www.instagram.com/" class="links-socialMedia"
           ><img
-            src="/img/Instagram.png"
+            src="/img/instagram3.png"
             class="images_socialMedia"
             alt="InstagramIcon"
         /></a>
-
         <a href="https://en-gb.facebook.com/" class="links-socialMedia"
           ><img
-            src="/img/Facebook.png"
+            src="/img/facebook3.png"
             class="images_socialMedia"
             alt="FacebookIcon"
         /></a>
