fixing header,form update

--- a/nanyRequest.html
+++ b/nanyRequest.html
@@ -92,12 +92,14 @@
           <fieldset class="contact-container">
             <legend>How would you like us to get in touch:*</legend>
             <br />
-            <input type="radio" id="AM" name="contact" value="AM" checked />
-            <label for="AM">Phone call AM</label>
-            <input type="radio" id="PM" name="contact" value="PM" />
-            <label for="PM">Phone call PM</label>
-            <input type="radio" id="email" name="contact" value="email" />
+            <div class="contact-cont">
+                          <input type="radio" id="AM" name="contact"  checked />
+            <label for="AM">Phone Call AM</label>
+            <input type="radio" id="PM" name="contact" />
+            <label for="PM">Phone Call PM</label>
+            <input type="radio" id="email" name="contact"  />
             <label for="email">Email</label>
+            </div>
           </fieldset>
 
           <fieldset class="nannyType-container">
